--- a/src/assets/containers/header/header.css
+++ b/src/assets/containers/header/header.css
@@ -5,11 +5,36 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
 }
 .navbar{
-    padding: 1.2rem 13vw;
+    padding: 1rem 13vw;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    transition: all 0.3s ease-in-out;
 }
+/*  */
+.navbar.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--color-crimson);
+    z-index: 100;
+  }
+  .navbar.sticky a, select{
+    color: black !important;
+    opacity: 0.7;
+    font-weight: 700;
+  }
+  .navbar.sticky a::before{
+    background-color: black;
+    opacity: 0.7;
+}
+.navbar.sticky li a img {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) hue-rotate(180deg) contrast(99%);
+  }
+  /*  */
 .logo{
     width: 8vw;
 }
@@ -33,4 +58,8 @@
     gap: 1.2rem;
     justify-content: flex-start !important;
     margin-top: 2.7rem;
+}
+.links{
+    justify-content: space-around;
+    gap: 1rem;
 }
