--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap") ;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
 :root {
     --font-base: 'roboto-regular';
@@ -8,6 +8,7 @@
     --color-black: #0C0C0C;
     --color-crimson: #fce8bd;
     --color-white: #FFFFFF;
+    --color-dark: #2c3442
     
   }
 *{
@@ -20,6 +21,7 @@
 body{
     font-family: var(--font-base);
     color: var(--color-white);
+    background-color: rgb(234, 232, 232);
 }
 
 .container{
@@ -32,7 +34,7 @@ body{
     border-radius: 28px;
     color: #fff;
     font-size: 1rem;
-    transition: 0.7s ease-in-out;
+    transition: 0.5s ease-in-out;
     
 }
 .btn:hover{
@@ -69,9 +71,7 @@ button{
 }
 .flex-center {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    gap: 1rem;
     flex-grow: 1;
   }
 
@@ -96,5 +96,12 @@ option {
     display: block;
     background-color: #f2f2f2;
   }
+.p__chapter{
+    color: var(--color-black);
+    text-align: center;
+    font-family: var(--font-alt);
+    font-size: 2rem;
+    margin: 1.5rem 0;
+}
 
 
