with no responsive

--- a/src/assets/containers/header/header.css
+++ b/src/assets/containers/header/header.css
@@ -13,6 +13,9 @@
     z-index: 5;
     transition: all 0.3s ease-in-out;
 }
+.navbar select{
+    color: #fff !important;
+}
 /*  */
 .navbar.sticky {
     position: fixed;
